[gd_scene load_steps=17 format=3 uid="uid://bybqrou3pp4ep"]

[ext_resource type="Texture2D" uid="uid://s3dcl1f7guhg" path="res://addons/Tiny Swords (Update 010)/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_nwg0w"]
[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_pl3fv"]
[ext_resource type="Texture2D" uid="uid://l8xbfikn3c22" path="res://addons/Tiny Swords (Update 010)/UI/Banners/Banner_Horizontal.png" id="2_2igv0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_thq3v"]
texture = ExtResource("1_nwg0w")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_rll4i"]
font_names = PackedStringArray("Consolas")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_opiwt"]
font = SubResource("SystemFont_rll4i")
font_size = 52
font_color = Color(0.0862745, 0.109804, 0.180392, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_muwbo"]
texture = ExtResource("2_2igv0")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_w7pog"]
font_names = PackedStringArray("Consolas")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_igb40"]
font = SubResource("SystemFont_w7pog")
font_size = 24
font_color = Color(0.0862745, 0.109804, 0.180392, 1)

[sub_resource type="Animation" id="Animation_wsiaq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.611765)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(293, 60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(282, 426)]
}

[sub_resource type="Animation" id="Animation_mwdp0"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.705882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(293, -130), Vector2(293, 60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 2),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(282, 750), Vector2(282, 426)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1eni"]
_data = {
"RESET": SubResource("Animation_wsiaq"),
"default": SubResource("Animation_mwdp0")
}

[sub_resource type="SystemFont" id="SystemFont_kujg7"]
font_names = PackedStringArray("Consolas")
font_weight = 999

[sub_resource type="LabelSettings" id="LabelSettings_upmkd"]
font = SubResource("SystemFont_kujg7")
font_size = 32

[sub_resource type="SystemFont" id="SystemFont_cxh4h"]
font_names = PackedStringArray("Consolas")
font_weight = 999

[sub_resource type="LabelSettings" id="LabelSettings_mdgnk"]
font = SubResource("SystemFont_cxh4h")
font_size = 24

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_pl3fv")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.611765)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -247.0
offset_top = 60.0
offset_right = 247.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_thq3v")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -53.0
offset_right = 195.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_opiwt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -258.0
offset_top = -294.0
offset_right = 257.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_muwbo")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -44.0
offset_right = 138.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 2

[node name="TimeTitleLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time survived:"
label_settings = SubResource("LabelSettings_igb40")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12:48"
label_settings = SubResource("LabelSettings_igb40")
horizontal_alignment = 2

[node name="MonstersTitleLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters slayed:"
label_settings = SubResource("LabelSettings_igb40")

[node name="MonstersLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "215"
label_settings = SubResource("LabelSettings_igb40")
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v1eni")
}
autoplay = "default"

[node name="RestartCountdownLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -90.0
offset_right = 126.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
text = "Restarting in 10 seconds..."
label_settings = SubResource("LabelSettings_upmkd")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -35.0
offset_right = 123.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Or click to restart"
label_settings = SubResource("LabelSettings_mdgnk")
